# leaps

./: .dockerignore  .env.example  .env.sakura.example  .gitignore  CI_CD.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.sakura  QUICKSTART_DOCKER.md  README.md  SAKURA_DOK.md  build-sakura.sh  config.json.example  config.yaml  deploy-sakura.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tmp.py  worker.py
.github/workflows/: docker-publish.yaml
data/: gfp.csv
notebooks/: example.ipynb
src/config/: config.py
src/early_stopper/: early_stopper.py
src/evaluator/: __init__.py  evaluator.py  fitness.py  hamiltonian.py  likelihood.py
src/generator/: generator.py
src/predictor/: dropout.py  predictor.py  regressor.py
src/runner/: runner.py
src/sampler/: sampler.py
src/state/: state.py
